feat: login user endpoint
