# apps/auth-service/src/routes/auth.routes.ts
@@ -1,9 +1,14 @@
 import express, { Router } from "express";
-import { userRegister, userVerify } from "../controllers/auth.controller";
+import {
+  userLogin,
+  userRegister,
+  userVerify,
+} from "../controllers/auth.controller";
 
 const authroute: Router = express.Router();
 
 authroute.post("/user-register", userRegister);
 authroute.post("/user-verify", userVerify);
+authroute.post("/user-login", userLogin);
 
 export default authroute;
